--- a/presentation/index.html
+++ b/presentation/index.html
@@ -4,10 +4,10 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Your Title</title>
+		<title>PyCon SG 2015 Post-Mortem</title>
 
-		<meta name="description" content="Your Description">
-		<meta name="author" content="Your Name">
+		<meta name="description" content="My slides for the Python User Group Singapore Meetup in July 2015">
+		<meta name="author" content="Martin Brochhaus">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css" id="theme">
+		<link rel="stylesheet" href="css/theme/solarized.css" id="theme">
 
 		<!-- Code syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -42,53 +42,271 @@
 			<div class="slides">
                 
 <section>
-    <h1>Your Title</h1>
-    <h3>Your sub-title</h3>
+    <h1>PyCon SG 2015</h1>
+    <h3>A Post-Mortem</h3>
 </section>
 <section data-markdown>
+  <script type="text/template">
+    ## Who am I?
+
+    * Martin Brochhaus
+    * "The Web Guy" of PyCon SG 2014 & 2015
+    * Founder of [Bitmazk Pte Ltd](https://bitmazk.com)
+    * Twitter: [@mbrochh](https://twitter.com/mbrochh)
+    * Github: [mbrochh](https://github.com/mbrochh)
+    * Email: mbrochh at gmail dot com
+  </script>
+</section>
+<section>
+  <section data-markdown>
     <script type="text/template">
-        ## Testing Markdown
+      ## The PyCon SG 2015 Committee
 
-        This _should_ be __bold__ and this should be a [link](https://github.com/mbrochh/reveal-template).
-
-        ### Heading 3
-
-        * A list
-        * With three
-        * items
+      * Chair: Victor
+      * Treasurer: Maurice
+      * Program: Ngoc, Lucas, Zhong Liang, Ivan, George
+      * Tutorial: GaoXiang, Rahul
+      * Food: Qiao Liang, Anthony, Liming
+      * Sponsorship: Sebastian, Alyssa
+      * Web: Martin, Shubham
+      * Publicity: Kartik, Sandra, Chris
+      * Volunteers: Arun, Michal, Bj&ouml;rn, Nathania
+      * Helpers: Lim Jin Yang, Dennis, Jovan, Jasmine & many more Dunman High Students
+      * **Total: > 27 voluntees!!**
     </script>
+  </section>
+  <section data-markdown>
+    <script type="text/template">
+      ## Why so many committee members?
+
+      * First PyCon APAC was organized by four people... o_O
+      * Usually we put two people on each position
+      * We wanted to introduce newcomers...
+      * ...but we failed
+      * Committee Meeting Stats:
+        * 10 meetings
+        * Max members: 11 (first meeting)
+        * Min members: 4
+        * Average members per meeting: 6 :-/
+    </script>
+  </section>
 </section>
 <section>
-    <h2>Testing code snippets</h2>
-    <pre><code>
-    import os
-    path = os.path.join('foo', 'bar')
-    def do_something(path):
-        return path
-    </code></pre>
+    <section data-markdown>
+        <script type="text/template">
+            ## The Tools: Trello
+            <img data-src="./images/trello.jpg">
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            ##  The Tools: Google Drive
+            <img data-src="./images/drive.jpg">
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            ##  The Tools: Google Groups
+            <img data-src="./images/groups.jpg">
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            ##  The Tools: Whatsapp
+            <img data-src="./images/whatsapp.png">
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            ##  The Tools: GitHub
+            <img data-src="./images/github.jpg">
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            ##  The Tools: PyCon.sg Website (Registration)
+            <img data-src="./images/website.jpg">
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            ##  The Tools: PyCon.sg Website (Stats)
+            <img data-src="./images/website2.jpg">
+        </script>
+    </section>
 </section>
 <section>
-    <section data-background="#ff0000" data-markdown>
+    <section data-markdown>
         <script type="text/template">
-            ## Testing backgrounds
-
-            Now we are red
+            ## The Conference Schedule
+            <img data-src="./images/schedule.jpg">
         </script>
     </section>
-    <section data-background="#00ff00" data-markdown>
+    <section data-markdown>
         <script type="text/template">
-            ## Testing backgrounds
+            ## The Conference Schedule
 
-            Now we are green
+            * One day of Tutorials
+              * 6 tutorials
+              * 3 hours per tutorial
+            * Two days of Talks
+              * 2 concurrent tracks
+              * 23 talks
+              * 45 minutes per talk
         </script>
     </section>
-    <section data-background="#0000ff" data-markdown>
+</section>
+<section>
+    <section data-markdown>
         <script type="text/template">
-            ## Testing backgrounds
+            ## Finances
+            <img data-src="./images/finances.jpg" style="height: 500px;">
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            ## Ticket Prices
 
-            Now we are blue
+            * **Tutorial Ticket**
+              * Early Bird: S$50
+              * Student Rate: S$50
+              * Normal Rate: S$70
+            * **Conference Ticket**
+              * Early Bird: S$180
+              * Student Rate: S$80
+              * Normal Rate: S$240
+            * RedDotRubyConf
+              * two days, single track
+              * Early Bird: S$285
+              * Normal Rate: S$350
+        </script>
+    </section>
+</section>
+<section>
+    <section data-markdown>
+        <script type="text/template">
+            ## The Good
 
-            <small>dabadi dabadai...</small>
+            * Keynotes were very good
+            * Venue easy to reach
+            * Equipment worked (WiFi, Projectors etc.)
+            * Catering was good as usual, enough vegetarian sets
+            * Very friendly atmosphere
+            * Mostly positive feedback
+              * but very little feedback in total
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            ## The Bad
+
+            * Not enough attendees (we need 100 more!)
+            * Not enough women
+            * Venue is very hot for sponsors and helpers
+            * Little interaction between sponsors and attendees
+              * People are too shy!
+            * Knowledge gap, people seemed bored
+            * No social after-event
+        </script>
+    </section>
+</section>
+<section>
+    <section data-markdown>
+        <script type="text/template">
+            ## PyCon SG 2015 in Pictures
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            ## Tutorial Day
+            <img data-src="./images/tutorials.jpg">
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            ## The Auditorium
+            <img data-src="./images/auditorium.jpg" />
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            ## Lecture Rooms
+            <img data-src="./images/lecturerooms.jpg" />
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            ## Catering
+            <img data-src="./images/catering.jpg" />
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            ## Sponsors
+            <img data-src="./images/sponsors.jpg" style="height: 500px;" />
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            ## Keynote Speakers
+            <img data-src="./images/keynotespeakers.jpg" style="height: 500px;" />
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            ## Speakers
+            <img data-src="./images/speakers.jpg" style="height: 500px;" />
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            ## This was PyCon SG 2015
+            <img data-src="./images/groupfoto.jpg" />
+        </script>
+    </section>
+</section>
+<section>
+    <section data-markdown>
+        <script type="text/template">
+            ## Crazy Ideas
+
+            * Bring down cost ($70 / day)
+            * Allow ticket purchase per day
+            * Try a new venue (all aircon)
+            * Skip tutorial day
+            * Make it three day single track
+              * Keynote (paid)
+              * Talks (paid)
+              * Lightning Talks (pre-submitted)
+              * Breakout Sessions (pre-prepared)
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            ## More Crazy Ideas
+
+            * Use Slack instead of Whatsapp
+            * Use Slack during conference
+              * Back-channel for talks
+              * Find professionals in your field
+              * Form channels for breakout sessions
+            * No more specialized roles
+              * The Chair owns Trello
+              * The Chair chases people to work on the Trello cards
+              * Everyone works on the next urgent task together
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
+            ## Enough Crazy Ideas?
+            <img data-src="./images/mindblown.gif">
+        </script>
+    </section>
+</section>
+<section>
+    <section data-markdown>
+        <script type="text/template">
+            <img data-src="./images/unclesam.jpg" style="height: 600px;">
         </script>
     </section>
 </section>
