--- a/source/base.html
+++ b/source/base.html
@@ -4,10 +4,10 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Your Title</title>
+		<title>PyCon SG 2015 Post-Mortem</title>
 
-		<meta name="description" content="Your Description">
-		<meta name="author" content="Your Name">
+		<meta name="description" content="My slides for the Python User Group Singapore Meetup in July 2015">
+		<meta name="author" content="Martin Brochhaus">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css" id="theme">
+		<link rel="stylesheet" href="css/theme/solarized.css" id="theme">
 
 		<!-- Code syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
