--- a/source/index.html
+++ b/source/index.html
@@ -2,7 +2,13 @@
 
 {% block slides %}
 {% include "source/title.html" %}
-{% include "source/test_markdown.html" %}
-{% include "source/test_code.html" %}
-{% include "source/test_backgrounds.html" %}
+{% include "source/whoami.html" %}
+{% include "source/the_team.html" %}
+{% include "source/the_tools.html" %}
+{% include "source/the_conference.html" %}
+{% include "source/finances.html" %}
+{% include "source/notsogood.html" %}
+{% include "source/pictures.html" %}
+{% include "source/ideas.html" %}
+{% include "source/wewantyou.html" %}
 {% endblock %}
