Added Engineers.sg slide

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -242,6 +242,13 @@
     </section>
     <section data-markdown>
         <script type="text/template">
+            ## Engineers.sg
+
+            * TODO: Find a cool picture :)
+        </script>
+    </section>
+    <section data-markdown>
+        <script type="text/template">
             ## Sponsors
             <img data-src="./images/sponsors.jpg" style="height: 500px;" />
         </script>
